--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -13,16 +13,21 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: ^1.17
+          go-version: ^1.18
       - name: Build
         run: go build ./...
   vet:
     name: Vet
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Vet
-        run: go vet ./...
+      - uses: actions/setup-go@v3
+        with:
+          go-version: ^1.18
+      - uses: actions/checkout@v3
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: v1.49
   test:
     name: Unit Tests
     runs-on: ubuntu-latest
@@ -30,7 +35,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: ^1.17
+          go-version: ^1.18
       - name: Test
-        run:
-          make test
+        run: make test
